--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
