feat: add tanstack router

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
+    "@tanstack/react-router": "^1.82.2",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -39,6 +40,8 @@
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@eslint/js": "^9.13.0",
+    "@tanstack/router-devtools": "^1.82.2",
+    "@tanstack/router-plugin": "^1.81.9",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
