--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:ci": "vitest run",
-    "gen:component": "tsx scripts/generate-component.ts"
+    "gen:component": "tsx scripts/generate-component.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "docs:generate": "typedoc --out docs src"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -30,6 +33,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
+    "@storybook/react": "^8.4.5",
     "@tanstack/react-router": "^1.82.2",
     "axios": "^1.7.7",
     "react": "^18.3.1",
@@ -38,9 +42,16 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@eslint/js": "^9.13.0",
+    "@storybook/addon-essentials": "^8.4.5",
+    "@storybook/addon-interactions": "^8.4.5",
+    "@storybook/addon-onboarding": "^8.4.5",
+    "@storybook/blocks": "^8.4.5",
+    "@storybook/react-vite": "^8.4.5",
+    "@storybook/test": "^8.4.5",
     "@tanstack/router-devtools": "^1.82.2",
     "@tanstack/router-plugin": "^1.81.9",
     "@testing-library/jest-dom": "^6.6.3",
@@ -53,15 +64,23 @@
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-storybook": "^0.11.1",
     "globals": "^15.11.0",
     "husky": "^9.1.7",
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
+    "storybook": "^8.4.5",
+    "tsx": "^4.7.1",
+    "typedoc": "^0.25.12",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
-    "vitest": "^2.1.5",
-    "tsx": "^4.7.1"
+    "vitest": "^2.1.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
