--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gen:component": "tsx scripts/generate-component.ts",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "docs:generate": "typedoc --out docs src"
+    "docs:generate": "typedoc --out docs src",
+    "analyze": "vite build --mode analyze"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -70,12 +71,14 @@
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
+    "rollup-plugin-visualizer": "^5.12.0",
     "storybook": "^8.4.5",
     "tsx": "^4.7.1",
     "typedoc": "^0.25.12",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
+    "vite-plugin-pwa": "^0.21.0",
     "vitest": "^2.1.5"
   },
   "eslintConfig": {
