--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.13.3",
     "swr": "^2.2.5",
     "zustand": "^5.0.1"
   },
