feat(i18n): add localization for russian language

--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@tanstack/react-router": "^1.82.2",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.17",
+    "i18next": "^24.0.0",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "recharts": "^2.13.3",
     "swr": "^2.2.5",
     "zustand": "^5.0.1"
