--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "format": "prettier --write .",
     "preview": "vite preview",
     "prepare": "husky",
     "test": "vitest",
@@ -32,7 +33,7 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fontsource/roboto": "^5.1.0",
-    "@mui/icons-material": "^6.1.8",
+    "@mui/icons-material": "^6.4.11",
     "@mui/material": "^6.1.8",
     "@storybook/react": "^8.4.5",
     "@tanstack/react-router": "^1.82.2",
