--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.4.11",
     "@mui/material": "^6.1.8",
+    "@mui/styles": "^6.4.8",
     "@storybook/react": "^8.4.5",
     "@tanstack/react-router": "^1.82.2",
     "axios": "^1.7.7",
